# naijascript

./: .gitignore  Cargo.toml  DESIGN.md  README  README.md  example.ns  install.ps1  install.sh  playground.html
.cargo/: release.toml
.github/workflows/: ci.yml  publish.yml  release.yml
benches/: lib.rs
benchmarks/: METHODOLOGY.md  README.md  analyze_results.py  run_benchmarks.sh
benchmarks/builtins/: math_functions.js  math_functions.ns  math_functions.py
benchmarks/math/: fibonacci_iterative.js  fibonacci_iterative.ns  fibonacci_iterative.py  fibonacci_recursive.js  fibonacci_recursive.ns  fibonacci_recursive.py  prime_count.js  prime_count.ns  prime_count.py
benchmarks/results/: fibonacci_iterative.json  fibonacci_iterative.md  fibonacci_recursive.json  fibonacci_recursive.md  math_functions.json  math_functions.md  prime_count.json  prime_count.md  string_concat.json  string_concat.md  string_interpolation.json  string_interpolation.md  string_manipulation.json  string_manipulation.md  summary.md
benchmarks/strings/: string_concat.js  string_concat.ns  string_concat.py  string_interpolation.js  string_interpolation.ns  string_interpolation.py  string_manipulation.js  string_manipulation.ns  string_manipulation.py
docs/: ARRAYS.md  BOOLEANS.md  BUILTIN_FUNCTIONS.md  COMMENTS.md  CONDITIONALS.md  DESIGN.md  FUNCTIONS.md  INSTALLATION.md  INTRODUCTION.md  LOOPS.md  LRM.md  NAIJA.md  NAIJAUP.md  NULL.md  NUMBERS.md  PROCESS_EXECUTION.md  README.md  STRINGS.md  SUMMARY.md  SYNTAX.md  VARIABLES.md  book.toml  grammar.bnf  grammar.ebnf  installation.md  naija.md  naijaup.md  syntax-reference.md
examples/: arithmetic.ns  array.ns  cegtpa.ns  count_occurrences.ns  errors.ns  fast_power.ns  fibonacci.ns  fizzbuzz.ns  gcd.ns  if_else.ns  lexicographical_min.ns  loop.ns  newton_sqrt.ns  null.ns  prime_test.ns  scoping.ns  stack_overflow.ns  variables.ns
scripts/: install.ps1  install.sh
src/: builtins.rs  cmd.rs  diagnostic.rs  diagnostics.rs  helper.rs  helpers.rs  interpreter.rs  itp.rs  lib.rs  main.rs  process.rs  resolver.rs  runtime.rs  toolchain.rs
src/analysis/: cfg.rs  diagnostics.rs  effects.rs  facts.rs  ids.rs  limits.rs  liveness.rs  mod.rs  opt.rs  reachability.rs  summary.rs
src/arena/: bump.rs  cow.rs  debug.rs  mod.rs  pool.rs  scratch.rs  string.rs
src/builtins/: array.rs  mod.rs  number.rs  process.rs  replace.rs  string.rs  tw.rs
src/simd/: memchr.rs  memchr2.rs  mod.rs
src/syntax/: ast.rs  lexer.rs  mod.rs  parse.rs  parser.rs  scanner.rs  token.rs
src/sys/: mod.rs  process_common.rs  unix.rs  wasm.rs  windows.rs
tests/: analysis.rs  common.rs  parser.rs  process.rs  resolver.rs  runtime.rs  scanner.rs  stress.rs
tests/fixtures/: process_helper.rs
tests/stress/: 01_string_overwrite_loop.ns  02_function_return_string_loop.ns  03_nested_function_calls.ns  04_string_concat_growth.ns  05_array_push_pop_cycle.ns  06_string_method_chains.ns  07_interpolation_overwrite.ns  08_recursive_fibonacci.ns  09_stack_overflow_recovery.ns  10_mutual_recursion.ns  11_nested_loops_scoping.ns  12_array_of_arrays.ns  13_split_join_cycle.ns  14_many_variables.ns  15_fizzbuzz_10k.ns  16_closure_like_scoping.ns  17_type_juggling.ns  18_string_replace_loop.ns  19_array_index_write.ns  20_combined_torture.ns
wasm/: Cargo.toml  playground.html
wasm/src/: lib.rs
