[package]
name = "naijascript"
version = "0.11.7"
edition = "2024"
rust-version = "1.90.0"
authors = ["Success Kingsley <xosnrdev@gmail.com>"]
description = "A scripting language interpreter inspired by the expressive linguistics of Naija (Nigerian Pidgin English)"
repository = "https://github.com/xosnrdev/naijascript"
license = "MIT"
readme = false
publish = false

# These wasm-opt flags help avoid build errors when compiling with wasm-pack.
# For more details, see: https://github.com/rustwasm/wasm-pack/issues/1441
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
clap-cargo = { version = "0.18.2", features = ["clap"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
minreq = { version = "2.14.1", features = ["https"] }

[target.'cfg(target_family = "wasm")'.dependencies]
ansi-to-html = "0.2.2"
html-escape = "0.2.13" 
wasm-bindgen = "0.2.100"

[target.'cfg(unix)'.dependencies]
libc = "0.2.177"
tar = "0.4.44"
xz2 = "0.1.7"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
	"Win32_System_Memory",
	"Win32_System_Console",
	"Win32_Storage_FileSystem",
	"Win32_System_IO",
] }
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "lib"
harness = false

[profile.release]
codegen-units = 1           # reduces binary size by ~2%
debug = "full"              # No one needs an undebuggable release binary
lto = true                  # reduces binary size by ~14%
opt-level = 3               # Squeeze out as much performance as possible
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%
incremental = true          # Improves re-compile times

[profile.bench]
inherits = "release"
panic = "unwind"
