[package]
name = "naijascript"
version = "1.0.31"
edition = "2024"
rust-version = "1.90.0"
authors = ["Success Kingsley <xosnrdev@gmail.com>"]
description = "A scripting language interpreter inspired by the expressive linguistics of Naija (Nigerian Pidgin English)"
repository = "https://github.com/xosnrdev/naijascript"
license = "MIT"
publish = false

[workspace]
resolver = "3"
members = [".", "wasm"]

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
clap-cargo = { version = "0.18.3", features = ["clap"] }
memchr-rs = { version = "1.0.11", features = ["memchr", "memchr2"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tempfile = "3.24.0"

# We exclude minreq as it breaks wasm builds
[target.'cfg(not(target_family = "wasm"))'.dependencies]
minreq = { version = "2.14.1", features = ["https"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.179"
tar = "0.4.44"
xz2 = "0.1.7"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
	"Win32_System_Memory",
	"Win32_System_Console",
	"Win32_Storage_FileSystem",
	"Win32_System_IO",
] }
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bench]]
name = "lib"
harness = false

[profile.release]
codegen-units = 1           # reduces binary size by ~2%
debug = "full"              # No one needs an undebuggable release binary
lto = true                  # reduces binary size by ~14%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%
incremental = true          # Improves re-compile times
