[package]
name = "wasm"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
description = "WASM bindings for The NaijaScript Interpreter"
repository = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "--enable-simd",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
]

[lib]
crate-type = ["cdylib"]

[dependencies]
ansi-to-html = "0.2.2"
html-escape = "0.2.13"
naijascript = { path = "../" }
wasm-bindgen = "0.2.100"
